# python-setup

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python.yml
src/: sample.py
tests/: test_sample.py
